tests/fixtures/invalid/float_in_none.py
# Cannot use 'in' with Float and None
x: bool = 1.0 in None
